[core] dialogs activity clean-up